# DuckFactory

./: 3dmodel.py  README.md  color_zone.py  cube.mtl  dither_class.py  duck.blend  duck.glb  duck.mtl  duck_mask.png.json  find_path.py  floyd_steinberg_dithering.py  main.py  out.txt  paths.json  plot_tests.ipynb  points_thing.txt  pyproject.toml  readme.md  rubber_duck.glb  spiderman.mtl  spiderman_rubber_ducky.glb  test_play_obj_coordinates.py
.github/workflows/: codecov.yaml  testing.yaml
duck_factory/: __init__.py  apply_image.py  color_zone.py  dither_class.py  gltf_obj.py  gltf_obj.sh  mesh_to_paths.py  model3d.py  path_bounder.py  point_sampling.py  pointsToPaths.py  points_to_paths.py  reachable_points.py
duck_factory/toolpath/: find_path.py  plot_tests.ipynb  points_star.txt  points_star_2.txt
duckcustomizer/: apply_image.py
tests/: test_apply_image.py  test_color_zone.py  test_dithering.py  test_mesh_to_path.py  test_model3d.py  test_norm_to_quat.py  test_path_bounder.py  test_pathfinder.py  test_point_sampling.py  test_reachable_path.py
